# awesome-git-mosaic

./: .awesome_file  .coveragerc  .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml  tests.yml
awesome_git_mosaic/src/adapters/console/: console_adapter.py
awesome_git_mosaic/src/adapters/git_mosaic/: git_mosaic_adapter.py
awesome_git_mosaic/src/awesome_git_mosaic/: __init__.py  __main__.py
awesome_git_mosaic/src/charmaps/basic/: basic_charmap.py
awesome_git_mosaic/src/gateways/git/: git_gateway.py
awesome_git_mosaic/src/tests/adapters/: test_console_adapter.py
awesome_git_mosaic/src/tests/charmaps/: test_basic_charmap.py
awesome_git_mosaic/src/tests/gateways/: test_git_gateway.py
awesome_git_mosaic/src/tests/usecases/: test_make_commit.py  test_modify_file.py  test_write_in_console.py
awesome_git_mosaic/src/usecases/: make_commit.py  modify_file.py  write_in_console.py  write_mosaic.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/awesome_git_mosaic/: __init__.py  __main__.py
src/awesome_git_mosaic/adapters/console/: console_adapter.py
src/awesome_git_mosaic/charmaps/: charmap.py
src/awesome_git_mosaic/usecases/: make_commit.py  modify_file.py  write_in_console.py  write_mosaic.py
tests/adapters/: test_console_adapter.py  test_git_mosaic_adapter.py
tests/charmaps/: test_basic_charmap.py
tests/gateways/: test_git_gateway.py
tests/usecases/: test_make_commit.py  test_modify_file.py  test_write_in_console.py  test_write_mosaic.py
(+4 files in other folders)
