[tool.poetry]
name = "awesome_git_mosaic"
version = "0.1.1"
description = "An awesome tool to write small texts on GitHub mosaic"
authors = ["Giovane Costa <gigio.coder@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Unidecode = "==1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "==7.4.3"
pytest-cov = "==4.1.0"
pycodestyle = "==2.11.1"
mypy = "==1.6.1"
isort = "^5.12.0"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "unidecode,awesome_git_mosaic.*"
ignore_missing_imports = true

[tool.isort]
line_length = 120

[project.urls]
"Homepage" = "https://github.com/justgigio/awesome-git-mosaic"
"Bug Tracker" = "https://github.com/justgigio/awesome-git-mosaic/issues"
"Documentation" = "https://awesome-git-mosaic.readthedocs.io"
